lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp.clang-tidy.loop-label.out.log
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:2565:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:2565:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:2579:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:2579:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:2593:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:2593:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:4549:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:4549:7: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6528:46: error: Invalid Directive: for current device, ram_t2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=A_loc type=ram_t2p impl=bram
                                             ^
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6529:44: error: Invalid Directive: for current device, ram_t2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=tmp type=ram_t2p impl=bram
                                           ^
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6530:50: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=denom_row type=ram_1p impl=bram
                                                 ^
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6541:2: warning: Added loop label VITIS_LOOP_37_1:   [xilinx-label-all-loops]
 for (int j = 0; j < 64; j++) {
 ^~~
 VITIS_LOOP_37_1: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6541:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6547:5: warning: Added loop label VITIS_LOOP_43_2:   [xilinx-label-all-loops]
    for (int i = 0; i < 256; i++) {
    ^~~
    VITIS_LOOP_43_2: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6547:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6549:9: warning: Added loop label VITIS_LOOP_45_3:   [xilinx-label-all-loops]
        for (int j = 0; j < 64; j++) {
        ^~~
        VITIS_LOOP_45_3: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6549:9: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6563:5: warning: Added loop label VITIS_LOOP_59_4:   [xilinx-label-all-loops]
    for (int idx = 0; idx < TOT_N; idx++) {
    ^~~
    VITIS_LOOP_59_4: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6563:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6572:2: warning: Added loop label VITIS_LOOP_68_5:   [xilinx-label-all-loops]
 for (int k = 0; k < UF_NORM; k++) {
 ^~~
 VITIS_LOOP_68_5: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6572:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6582:5: warning: Added loop label VITIS_LOOP_78_6:   [xilinx-label-all-loops]
    for (int jb = 0; jb < 64; jb += UF_NORM) {
    ^~~
    VITIS_LOOP_78_6: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6582:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6584:2: warning: Added loop label VITIS_LOOP_80_7:   [xilinx-label-all-loops]
 for (int k = 0; k < UF_NORM; k++) {
 ^~~
 VITIS_LOOP_80_7: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6584:2: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6594:5: warning: Added loop label VITIS_LOOP_90_8:   [xilinx-label-all-loops]
    for (int idx = 0; idx < TOT_O; idx++) {
    ^~~
    VITIS_LOOP_90_8: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6594:5: note: FIX-IT applied suggested code changes
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6600:9: warning: Added loop label VITIS_LOOP_96_9:   [xilinx-label-all-loops]
        for (int k = 0; k < UF_OUT; k++) {
        ^~~
        VITIS_LOOP_96_9: 
/nethome/wsun377/ece8893/FPGA_ECE8893/2026_Spring/lab1-copy/project_1/hls/.autopilot/db/top.pp.0.cpp:6600:9: note: FIX-IT applied suggested code changes
